v0.1.3
    - main: lock for exit functions
    - rampart-sql:    added missing handle close in sql.reset
    - rampart-server: fixed cookie parsing
    - rampart-sql:    fixed faulty passing of user argument to callback in exec
    - rampart-sql:    revamp of reset of global texis parameters, as the
                      internal texis method caused a significant slowdown.
    - rampart-sql:    bug fix for missing grab of error buffer before printing.
v0.1.2
    - rampart-net: resolve error message fixes
    - rampart-net: added resolver.reverse ip to name functions 
    - rampart-url: made module compatible with node
    - rampart-server: bug fix: check return val is object before looking for property 'defer'
    - rampart-server: check for cyclic references before returning object JSON
v0.1.1
    - Sql.rexFile: removed buffer, using mmap instead.
    - Template Literal translation improvements.
    - setTimeout et al - accept parameters.
    - Added log rotation to web_server_conf.js
    - fixed stat file dates on 32 bit systems.
    - NEW rampart-net.so --  node.js like net function with ssl
    - fixed segfault on clearTimeout when event expired
    - improved libevhtp_ws thread load balancing
    - added server req.reply and return val {defer:true}
    - additional node.js style buffer options and abprintf()
v0.1.0
    - initial release