@@ -6,6 +6,9 @@ v0.1.3
     - rampart-sql:    revamp of reset of global texis parameters, as the
                       internal texis method caused a significant slowdown.
     - rampart-sql:    bug fix for missing grab of error buffer before printing.
+    - rampart.utils:  bug fix for closing pipe twice.
+    - rampart-server: added setting for libevent for max single read/write.
+    - rampart-sql:    bug fix for reset of texis settings when switching handles
 v0.1.2
     - rampart-net: resolve error message fixes
     - rampart-net: added resolver.reverse ip to name functions 
